<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/bckg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bckg_for_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/pink" />

    <TextView
        android:id="@+id/Text_Number_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/number_of_faces"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="#B71C1C"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/number_of_faces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <TextView
        android:id="@+id/Result"
        android:layout_width="211dp"
        android:layout_height="74dp"
        android:text="@string/result"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Final_number"
        app:layout_constraintHorizontal_bias="0.416"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.642" />

    <TextView
        android:id="@+id/number_of_faces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <Button
        android:id="@+id/go20"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="52dp"
        android:text="@string/go20"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_10"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/go12"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:text="@string/go12"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/go20"
        app:layout_constraintTop_toBottomOf="@+id/add_10"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/go6"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:text="@string/go6"
        app:layout_constraintEnd_toStartOf="@+id/go12"
        app:layout_constraintTop_toBottomOf="@+id/supp_10"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/supp_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number_of_faces"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/add_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toEndOf="@+id/number_of_faces"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.216"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/supp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/number_of_faces"
        app:layout_constraintHorizontal_bias="0.764"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supp_one"
        app:layout_constraintVertical_bias="0.039"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Final_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="200dp"
        android:text="@string/Final_Number"
        android:textColor="@android:color/black"
        android:textSize="100sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/Roll_button"
        android:layout_width="122dp"
        android:layout_height="63dp"
        android:text="@string/roll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Final_number"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/go0"
        android:layout_width="55dp"
        android:layout_height="49dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/go1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supp_10"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TextContrastCheck" />

    <Button
        android:id="@+id/add_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toEndOf="@+id/number_of_faces"
        app:layout_constraintTop_toBottomOf="@+id/add_one"
        app:layout_constraintVertical_bias="0.039"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/informationButton"
        android:layout_width="37dp"
        android:layout_height="40dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/informationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/_176" />

    <TextView
        android:id="@+id/informationText"
        android:layout_width="325dp"
        android:layout_height="65dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>